# warmpool

./: LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
src/warmpool/: __init__.py  _exceptions.py  _logging.py  _worker.py  pool.py
static/: example.py
tests/: _helpers.py  conftest.py  test_logging.py  test_memory.py  test_pool.py  test_spare.py  test_stress.py
